--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  padding-top: 50px;
+}
+.input{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 5px 0;
+}
+.input .city_name{
+  display: block;
+  width: 250px;
+  padding-left: 15px;
+}
+.input button{
+  display: block;
+  width: 130px;
+  outline: 0;
+  margin: 0 10px;
+}
+.input .cicle_update{
+  display: flex;
+  height: 28px;
+  align-items: center;
+}
+.input .cicle_update input {
+  display: block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  
+}
+.input .cicle_update p {
+  margin: 0;
+  text-align: left;
 }
